testing alignment fixes

--- a/webapp/css/main.css
+++ b/webapp/css/main.css
@@ -18,23 +18,26 @@ img.cover {
 }
 .wrapper {
     text-align: center;
+    position: absolute;
+    height: 10%;
+    width: 100%;
+    top: 75%;
+    z-index: 10;
 }
 .floatbox {
     display: inline-block;
-    position: absolute;
     width: 75px;
-    text-align: center;
     background-color: grey;
     color: white;
     border-radius: 15px;
     padding:0px 5px 0px 5px;
-    font-size: 1vh;
-    z-index: 10;
+    font-size: 1.5vh;
+    margin: 0 auto;
 }
 #tapbox {
-    top: 75%;
+    top: 0%;
 }
 #actionbox {
-    top: 85%;
+    top: 50%;
 }
 
